--- a/features.html
+++ b/features.html
@@ -40,6 +40,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <script>
+      window.$zoho = window.$zoho || {};
+      $zoho.salesiq = $zoho.salesiq || { ready: function () {} };
+    </script>
+    <script
+      id="zsiqscript"
+      src="https://salesiq.zohopublic.ca/widget?wc=77a5e6d96d632b0a91f8bb237dc0d72919fd2a83d90e88ea6108ccba9b3d4e3c"
+      defer
+    ></script>
+    <script src="https://cdn-ca.pagesense.io/js/zoho3419/8a93ff5516d1450b837c6ffdc0daffcb.js"></script>
     <style>
       .form {
         width: 100%;
@@ -189,9 +199,7 @@
           </div>
         </div>
         <!-- Text Section 2 -->
-        <div
-          class="block absolute bottom-12 md:bottom-28 left-4 md:left-32"
-        >
+        <div class="block absolute bottom-12 md:bottom-28 left-4 md:left-32">
           <h2 class="text-white text-2xl md:text-3xl font-bold league-spartan">
             Three components make up the<br class="hidden md:block" />
             complete product:
@@ -239,17 +247,13 @@
             Design
           </h1>
           <div data-aos="fade-right" data-aos-duration="700">
-            <p
-              class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan"
-            >
+            <p class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan">
               The container pod is a two-chamber system. The cleansing solution
               is held in the outer chamber. The inner chamber contains a
               compressed cellulose cloth wipe. The two chambers are separated
               from each other until activated for use. 
             </p>
-            <p
-              class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan"
-            >
+            <p class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan">
               When pressure is applied to the middle of the top of the pod, by
               thumb or finger, the container opens the valve at the bottom and
               the cleansing solution from the outer chamber reaches the cloth
@@ -384,7 +388,9 @@
         </div>
         <!-- Step 4 -->
         <div class="flex items-center w-1/2 hidden" id="detail-4">
-          <p class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold">
+          <p
+            class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold"
+          >
             Simply wipe your hands with the soft, yet sturdy, cloth to remove
             dirt and germs. Experience the immediate cleansing action and feel
             confident in reducing the spread of viruses and bacteria. Enjoy the
@@ -409,14 +415,18 @@
           ></div>
         </div>
         <div class="flex items-center w-1/2 hidden" id="detail-2">
-          <p class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold">
+          <p
+            class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold"
+          >
             Press down on the centre of the pod to activate the process. This
             breaks the seal and allows the cleansing solution to soak into the
             dry cloth. Watch as it unfurl
           </p>
         </div>
         <div class="flex items-center w-1/2 hidden" id="detail-3">
-          <p class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold">
+          <p
+            class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold"
+          >
             Pause for just a few seconds to allow the cloth to completely absorb
             the cleansing solution. Now it’s ready to use. 
           </p>
@@ -701,7 +711,10 @@
             <div
               class="text-[28px] md:text-[40px] text-nowrap text-[#3a50b3] font-bold bg-[#97CAEB] rounded-full h-40 w-40 md:h-56 md:w-56 flex justify-end items-center slide-in-up text-right"
             >
-              <h2>Skin-safe <br> Cleaning Solution</h2>
+              <h2>
+                Skin-safe <br />
+                Cleaning Solution
+              </h2>
             </div>
           </div>
         </div>
@@ -915,7 +928,7 @@
             </button>
           </div>
           <a href="privacy-policy.html">
-            <p class="text-right text-xl p-4">Privacy Policy</p>
+            <p class="text-right text-sm p-4">Privacy Policy</p>
           </a>
         </div>
       </div>
@@ -967,9 +980,8 @@
             Follow Us
           </h1>
           <div class="flex gap-3 items-center">
-            <img src="./public/Fb.svg" class="size-7" alt="fb" />
-            <img src="./public/Instagram.svg" class="size-7" alt="fb" />
-            <img src="./public/Dribbble.svg" class="size-7" alt="fb" />
+            <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
+            <img src="./public/Instagram.svg" class="size-7" id="instaImage" alt="fb" />
             <img
               src="./public/LinkedIn.svg"
               class="size-7"
@@ -1074,8 +1086,19 @@
       document
         .getElementById("linkedInImage")
         .addEventListener("click", function () {
-          window.location.href = "https://www.linkedin.com/company/wicked-wipes/";
+          window.location.href =
+          ("https://www.linkedin.com/company/wicked-wipes/","_blank");
         });
+        document
+        .getElementById("instaImage")
+        .addEventListener("click", function () {
+          window.location.href =
+            ("https://www.instagram.com/wickedhandwipes/", "_blank");
+        });
+      document.getElementById("fbImage").addEventListener("click", function () {
+        window.location.href =
+          ("https://www.facebook.com/profile.php?id=61565429330359", "_blank");
+      });
     </script>
     <script>
       const designSection = document.getElementById("design-section");
