--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script>window.$zoho=window.$zoho || {};$zoho.salesiq=$zoho.salesiq||{ready:function(){}}</script>
+  <script src="https://cdn-ca.pagesense.io/js/zoho3419/8a93ff5516d1450b837c6ffdc0daffcb.js"></script>
+  <script id="zsiqscript" src="https://salesiq.zohopublic.ca/widget?wc=77a5e6d96d632b0a91f8bb237dc0d72919fd2a83d90e88ea6108ccba9b3d4e3c" defer></script>
   <style>
     .form {
       width: 100%;
@@ -414,7 +417,7 @@
             </button>
         </div>
         <a href="privacy-policy.html">
-          <p class="text-right text-xl p-4">Privacy Policy</p>
+          <p class="text-right text-sm p-4">Privacy Policy</p>
         </a>
     </div>    
     </div>
@@ -452,9 +455,9 @@
       <div class="flex md:flex-col gap-2">
         <h1 class="text-white league-spartan font-bold text-base">Follow us</h1>
         <div class="flex gap-3 items-center">
-          <img src="./public/Fb.svg" class="size-7" alt="fb">
-          <img src="./public/Instagram.svg" class="size-7" alt="fb">
-          <img src="./public/Dribbble.svg" class="size-7" alt="fb">
+          <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage">
+          <img src="./public/Instagram.svg" class="size-7" alt="Insta" id="instaImage">
+      
           <img src="./public/LinkedIn.svg" class="size-7" alt="fb" id="linkedInImage">
         </div>
       </div>
@@ -570,7 +573,17 @@
       document
           .getElementById("linkedInImage")
           .addEventListener("click", function () {
-            window.location.href = "https://www.linkedin.com/company/wicked-wipes/";
+            window.location.href = ("https://www.linkedin.com/company/wicked-wipes/","_blank");
+          });
+      document
+          .getElementById("instaImage")
+          .addEventListener("click", function () {
+            window.location.href = ("https://www.instagram.com/wickedhandwipes/","_blank");
+          });
+      document
+          .getElementById("fbImage")
+          .addEventListener("click", function () {
+            window.location.href = ("https://www.facebook.com/profile.php?id=61565429330359","_blank");
           });
   </script>
 <script>
