--- a/private-label.html
+++ b/private-label.html
@@ -43,7 +43,16 @@
       rel="stylesheet"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <script>
+      window.$zoho = window.$zoho || {};
+      $zoho.salesiq = $zoho.salesiq || { ready: function () {} };
+    </script>
+    <script
+      id="zsiqscript"
+      src="https://salesiq.zohopublic.ca/widget?wc=77a5e6d96d632b0a91f8bb237dc0d72919fd2a83d90e88ea6108ccba9b3d4e3c"
+      defer
+    ></script>
+    <script src="https://cdn-ca.pagesense.io/js/zoho3419/8a93ff5516d1450b837c6ffdc0daffcb.js"></script>
     <style>
       .form {
         width: 100%;
@@ -464,7 +473,7 @@
             </button>
           </div>
           <a href="privacy-policy.html">
-            <p class="text-right text-xl p-4">Privacy Policy</p>
+            <p class="text-right text-sm p-4">Privacy Policy</p>
           </a>
         </div>
       </div>
@@ -516,9 +525,8 @@
             Follow Us
           </h1>
           <div class="flex gap-3 items-center">
-            <img src="./public/Fb.svg" class="size-7" alt="fb" />
-            <img src="./public/Instagram.svg" class="size-7" alt="fb" />
-            <img src="./public/Dribbble.svg" class="size-7" alt="fb" />
+            <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
+            <img src="./public/Instagram.svg" class="size-7" id="instaImage" alt="fb" />
             <img
               src="./public/LinkedIn.svg"
               class="size-7"
@@ -566,8 +574,18 @@
         .getElementById("linkedInImage")
         .addEventListener("click", function () {
           window.location.href =
-            "https://www.linkedin.com/company/wicked-wipes/";
+            ("https://www.linkedin.com/company/wicked-wipes/", "_blank");
         });
+      document
+        .getElementById("instaImage")
+        .addEventListener("click", function () {
+          window.location.href =
+            ("https://www.instagram.com/wickedhandwipes/", "_blank");
+        });
+      document.getElementById("fbImage").addEventListener("click", function () {
+        window.location.href =
+          ("https://www.facebook.com/profile.php?id=61565429330359", "_blank");
+      });
     </script>
     <script>
       $(document).ready(function () {
