--- a/features.html
+++ b/features.html
@@ -146,7 +146,7 @@
             >
               <li><a href="features.html">Features</a></li>
               <li><a href="private-label.html">Private Label</a></li>
-              <li><a href="testimonials.html">Who We are</a></li>
+              <li><a href="who-we-are.html">Who We are</a></li>
               <li><a href="#target-section">Contact</a></li>
             </ul>
           </nav>
@@ -190,7 +190,7 @@
                 <a href="private-label.html">Private Label</a>
               </li>
               <li>
-                <a href="testimonials.html">Who We are</a>
+                <a href="who-we-are.html">Who We are</a>
               </li>
               <li>
                 <a href="#target-section">Contact</a>
@@ -200,7 +200,7 @@
         </div>
         <!-- Text Section 2 -->
         <div class="block absolute bottom-12 md:bottom-28 left-4 md:left-32">
-          <h2 class="text-white text-2xl md:text-3xl font-bold league-spartan">
+          <h2 class="text-white text-2xl md:text-3xl font-bold urbanist-regular">
             Three components make up the<br class="hidden md:block" />
             complete product:
           </h2>
@@ -247,13 +247,13 @@
             Design
           </h1>
           <div data-aos="fade-right" data-aos-duration="700">
-            <p class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan">
+            <p class="text-[20px] md:text-xl pt-6 md:pt-10 urbanist-regular font-normal">
               The container pod is a two-chamber system. The cleansing solution
               is held in the outer chamber. The inner chamber contains a
               compressed cellulose cloth wipe. The two chambers are separated
               from each other until activated for use. 
             </p>
-            <p class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan">
+            <p class="text-[20px] md:text-xl pt-6 md:pt-10 urbanist-regular font-normal">
               When pressure is applied to the middle of the top of the pod, by
               thumb or finger, the container opens the valve at the bottom and
               the cleansing solution from the outer chamber reaches the cloth
@@ -298,7 +298,7 @@
               class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB] transition-colors duration-300"
             ></div>
           </div>
-          <p class="text-xl text-white league-spartan font-bold">
+          <p class="text-xl text-white urbanist-regular font-bold">
             Place the Wicked Wipes pod on the table. The product is made up of
             two parts - the dry compressed cloth hand wipe and the gentle
             cleansing formulation. The hand wipe is kept dry to maintain
@@ -389,7 +389,7 @@
         <!-- Step 4 -->
         <div class="flex items-center w-1/2 hidden" id="detail-4">
           <p
-            class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold"
+            class="border-2 border-white text-white text-xl p-6 rounded-xl urbanist-regular font-bold"
           >
             Simply wipe your hands with the soft, yet sturdy, cloth to remove
             dirt and germs. Experience the immediate cleansing action and feel
@@ -416,7 +416,7 @@
         </div>
         <div class="flex items-center w-1/2 hidden" id="detail-2">
           <p
-            class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold"
+            class="border-2 border-white text-white text-xl p-6 rounded-xl urbanist-regular font-bold"
           >
             Press down on the centre of the pod to activate the process. This
             breaks the seal and allows the cleansing solution to soak into the
@@ -425,7 +425,7 @@
         </div>
         <div class="flex items-center w-1/2 hidden" id="detail-3">
           <p
-            class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold"
+            class="border-2 border-white text-white text-xl p-6 rounded-xl urbanist-regular font-bold"
           >
             Pause for just a few seconds to allow the cloth to completely absorb
             the cleansing solution. Now it’s ready to use. 
@@ -970,7 +970,7 @@
                 >
               </li>
               <li>
-                <a href="testimonials.html" class="text-white">Who We are</a>
+                <a href="who-we-are.html" class="text-white">Who We are</a>
               </li>
             </ul>
           </nav>
@@ -1086,17 +1086,17 @@
       document
         .getElementById("linkedInImage")
         .addEventListener("click", function () {
-          window.location.href =
+          window.open
           ("https://www.linkedin.com/company/wicked-wipes/","_blank");
         });
         document
         .getElementById("instaImage")
         .addEventListener("click", function () {
-          window.location.href =
+          window.open
             ("https://www.instagram.com/wickedhandwipes/", "_blank");
         });
       document.getElementById("fbImage").addEventListener("click", function () {
-        window.location.href =
+        window.open
           ("https://www.facebook.com/profile.php?id=61565429330359", "_blank");
       });
     </script>
