--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <a href="private-label.html">Private Label</a>
             </li>
             <li>
-              <a href="testimonials.html">Who We are</a>
+              <a href="who-we-are.html">Who We are</a>
             </li>
             <li>
               <a href="#target-section">Contact</a>
@@ -110,7 +110,7 @@
               <a href="private-label.html">Private Label</a>
             </li>
             <li>
-              <a href="testimonials.html">Who We are</a>
+              <a href="who-we-are.html">Who We are</a>
             </li>
             <li>
               <a href="#target-section">Contact</a>
@@ -170,11 +170,11 @@
         </h1>
       </div>
       <div class="flex flex-col w-full">
-        <p class="league-spartan text-xl">
+        <p class="urbanist-regular text-xl">
           The compressed, high-quality cloth hand wipe inside an attractive and compact pod, cleans and refreshes your
           hands...
         </p>
-        <p class="league-spartan text-xl">
+        <p class="urbanist-regular text-xl">
           So easy and fun to use...
         </p>
       </div>
@@ -186,8 +186,8 @@
           class="flex gap-4 justify-center items-start p-6 shadow-2xl rounded-3xl font-['Baloo'] md:w-[500px] my-8">
           <img src="./public/water-drop.png" alt="">
           <div>
-            <h2 class="font-bold text-[28px] league-spartan text-[#3A50B3]">Natural</h2>
-            <p class="league-spartan text-[16px]">Wicked Wipes use only about 5 ml. of cleansing fluid per pod. Washing hands
+            <h2 class="font-bold text-[28px] urbanist-regular text-[#3A50B3]">Natural</h2>
+            <p class="urbanist-regular text-[16px]">Wicked Wipes use only about 5 ml. of cleansing fluid per pod. Washing hands
               requires
               on average
               1.5 litres of water.</p>
@@ -197,17 +197,17 @@
           class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
           <img src="./public/leaf.png" alt="">
           <div>
-            <h2 class="font-bold text-[28px] league-spartan text-[#3A50B3]">Biodegradable</h2>
-            <p class="league-spartan text-[16px]">Well-made, soft, yet hardy cellulose hand wipes are designed to biodegrade
-              naturally</p>
+            <h2 class="font-bold text-[28px] urbanist-regular text-[#3A50B3]">Biodegradable</h2>
+            <p class="urbanist-regular text-[16px]">Well-made, soft, yet hardy cellulose hand wipes are designed to biodegrade
+              naturally.</p>
           </div>
         </div>
         <div id="document-sliding-cards75"
           class="flex h-full gap-4 justify-center items-center p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
           <img src="./public/recycle.png" alt="">
           <div>
-            <h2 class="font-bold text-[28px] league-spartan text-[#3A50B3]">Recyclable</h2>
-            <p class="league-spartan text-[16px]">The pod is made from high quality PP / 05 raw material which is 100% recyclable.
+            <h2 class="font-bold text-[28px] urbanist-regular text-[#3A50B3]">Recyclable</h2>
+            <p class="urbanist-regular text-[16px]">The pod is made from high quality PP / 05 raw material which is 100% recyclable.
             </p>
           </div>
         </div>
@@ -221,7 +221,7 @@
           <button class="font-['Baloo'] px-10 text-white text-lg font-medium bg-[#3A50B3] rounded-full mt-6 py-2" onclick="window.location.href='features.html';">
             Learn more
           </button>
-          <p class="text-lg md:text-[28px] league-spartan text-[#7DB1E7] font-bold mt-2">About Wicked Wipes</p>
+          <p class="text-lg md:text-[28px] urbanist-regular text-[#7DB1E7] font-bold mt-2">About Wicked Wipes</p>
         </div>
       </div>
     </div>
@@ -295,7 +295,7 @@
         </h1>
       </div>
       <div class="flex w-full md:px-28 px-4 justify-center">
-        <p class="md:text-2xl text-xl league-spartan font-normal text-center">
+        <p class="md:text-2xl text-xl urbanist-regular font-normal text-center">
           Elevate your customer experience at your dining establishment
           Hand hygiene is the primary means of reducing the spread of viruses and bacteria. Your customers will appreciate your commitment to their health and safety!
         </p>
@@ -345,7 +345,7 @@
         class="md:gap-x-40 flex md:flex-row flex-col justify-between items-center opacity-0 transition-opacity duration-300"
         id="document-heading1">
         <div class="flex flex-col md:gap-4 gap-4">
-          <h1 class="text-4xl md:text-[72px] text-gradient md:leading-none font-normal">Make It Yours </h1>
+          <h1 class="text-4xl md:text-[72px] text-gradient md:leading-none font-normal">Make it yours </h1>
           <p class="text-[20px] font-['League Spartan'] font-normal text-[#3A50B3] word-wrap">Wicked
             Wipes is an original advertising opportunity for businesses and a successful marketing tool that will
             surprise and delight your customers. Add your brand to customize the pod.</p>
@@ -448,12 +448,12 @@
           <ul class="flex flex-col gap-y-1">
             <li><a href="features.html" class="text-white">Features</a></li>
             <li><a href="private-label.html" class="text-white">Private Label</a></li>
-            <li><a href="testimonials.html" class="text-white">Who We are</a></li>
+            <li><a href="who-we-are.html" class="text-white">Who We are</a></li>
           </ul>
         </nav>
       </div>
       <div class="flex md:flex-col gap-2">
-        <h1 class="text-white league-spartan font-bold text-base">Follow us</h1>
+        <h1 class="text-white urbanist-regular font-bold text-base">Follow us</h1>
         <div class="flex gap-3 items-center">
           <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage">
           <img src="./public/Instagram.svg" class="size-7" alt="Insta" id="instaImage">
@@ -573,17 +573,17 @@
       document
           .getElementById("linkedInImage")
           .addEventListener("click", function () {
-            window.location.href = ("https://www.linkedin.com/company/wicked-wipes/","_blank");
+            window.open("https://www.linkedin.com/company/wicked-wipes/","_blank");
           });
       document
           .getElementById("instaImage")
           .addEventListener("click", function () {
-            window.location.href = ("https://www.instagram.com/wickedhandwipes/","_blank");
+            window.open("https://www.instagram.com/wickedhandwipes/","_blank");
           });
       document
           .getElementById("fbImage")
           .addEventListener("click", function () {
-            window.location.href = ("https://www.facebook.com/profile.php?id=61565429330359","_blank");
+            window.open("https://www.facebook.com/profile.php?id=61565429330359","_blank");
           });
   </script>
 <script>
